--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,9 +1,11 @@
-eureka:
-  client:
-    service-url:
-      defaultZone : http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone : http://localhost:8761/eureka/
 
 
 spring:
   application:
     name: AUTH-SERVICE
+  config:
+    import: configserver:http://localhost:9595
