--- a/swiggy-app/src/main/resources/application.yml
+++ b/swiggy-app/src/main/resources/application.yml
@@ -4,8 +4,32 @@ server:
 spring:
   application:
     name: SWIGGY-APP
+  config:
+    import: configserver:http://localhost:9595
 
-eureka:
-  client:
-    service-url:
-      defaultZone : http://localhost:8761/eureka/
+management:
+#  health:
+#    circuitbreakers:
+#      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone : http://localhost:8761/eureka/
+
+
+#microservice:
+#  restaurant-service:
+#    endpoints:
+#      fetchOrderById:
+#        uri: http://RESTAURANT-SERVICE/restaurant/orders/status/
+
+#test:
+#  input: 1
