added ELK (Elastic search, Logstash, Kibana) for centralized logging

--- a/swiggy-app/src/main/resources/application.yml
+++ b/swiggy-app/src/main/resources/application.yml
@@ -33,3 +33,8 @@ management:
 
 #test:
 #  input: 1
+
+
+#logging:
+#  file:
+#    name: G:\Electronic_Store\backend\javatechie\microservices\spring-cloud-gateway-jwt-security\app-logs-file\ecom-log
